[package]
name = "rvm"
version = "0.0.1"
authors = ["notPlancha <Andre_Plancha@iscte-iul.pt>"]
description = "R version (and package) manager"
repository = "https://github.com/notPlancha/rvm"
publish = false
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.5", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["blocking"] }
thiserror = "1.0.40"
lazy_static = "1.4.0"
tl = "0.7.7"
regex = "1"
path-clean = "1.0.1"
duct = "0.13.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
semver = "1.0.17"

